--- a/0x15-javascript-web_jquery/5-main.html
+++ b/0x15-javascript-web_jquery/5-main.html
@@ -59,7 +59,7 @@
 </html> {% endcomment %}
 
 {% comment %} 4 {% endcomment %} -->
-
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -79,5 +79,24 @@
     <div id="toggle_header">Toggle header</div>
     <footer>Holberton School - 2017</footer>
     <script type="text/javascript" src="4-script.js"></script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Holberton School</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  </head>
+  <body>
+    <header>First HTML page</header>
+    <br />
+    <div id="add_item">Add item</div>
+    <br />
+    <ul class="my_list">
+      <li>Item</li>
+    </ul>
+    <footer>Holberton School - 2017</footer>
+    <script type="text/javascript" src="5-script.js"></script>
   </body>
 </html>
